alignment by content fixed

--- a/style.css
+++ b/style.css
@@ -2,8 +2,41 @@ body {
     font-family: "Iowan Old Style";
 }
 
-header {
-    display: flex;
+.header-wrapper, .current-city, .favourites {
+    max-width: 480px;
+    margin: 0 auto;
+}
+
+.current-city-header, .current-city-main, .favourites-header {
+    padding: 0 10px;
+}
+
+.city, .current-city-main-ul {
+    flex-basis: 100%;
+}
+
+@media only screen and (min-width: 910px) {
+
+    .header-wrapper, .current-city, .favourites {
+        max-width: 910px;
+    }
+
+    .city, .current-city-main-ul {
+        flex-basis: 45%;
+    }
+
+}
+
+@media only screen and (min-width: 1350px) {
+
+    .header-wrapper, .favourites {
+        max-width: 1350px;
+    }
+
+    .city {
+        flex-basis: 30%;
+    }
+
 }
 
 header {
@@ -11,17 +44,16 @@ header {
     height: 85px;
 }
 
+.header-wrapper {
+    display: flex;
+}
+
 .logo {
     width: 60px;
     margin: 10px;
 }
 
-.current-city {
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-.current-city-header {
+.current-city-header, .favourites-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -82,19 +114,6 @@ button {
     margin-left: 20px;
 }
 
-.favourites {
-    max-width: 95%;
-    margin: 0 auto;
-}
-
-.favourites-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 95%;
-    margin: 0 auto;
-}
-
 form {
     margin-left: auto;
     font-weight: bold;
@@ -121,8 +140,7 @@ input[type="submit"]:hover {
 }
 
 .favourites-main {
-    justify-content: center;
-    align-content: start;
+    justify-content: flex-start;
     display: flex;
     flex-wrap: wrap;
 }
@@ -171,7 +189,7 @@ li {
 }
 
 .city-main {
-    width: 400px;
+    min-width: 400px;
 }
 
 .weather-data-line {
